// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer Pure component match expected snapshot 1`] = `
<withStyles(ContainerPure)>
  <withStyles(RowPure)>
    <withStyles(ColumnPure)
      xs={12}
    >
      <div
        className="footer-0-3"
      >
        <withStyles(RowPure)>
          <withStyles(ColumnPure)
            lg={4}
            xs={0}
          />
          <withStyles(ColumnPure)
            lg={4}
            xs={12}
          >
            <div
              className="copyright-0-0"
            >
              DEM Team - 04.03.2007
            </div>
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            lg={4}
            xs={0}
          >
            <withStyles(HiddenPure)
              md="down"
            >
              <div
                className="socialMediaLinkIconContainer-0-1"
              />
            </withStyles(HiddenPure)>
          </withStyles(ColumnPure)>
        </withStyles(RowPure)>
      </div>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
</withStyles(ContainerPure)>
`;

exports[`Footer Pure component with socialMediaLinkArray match expected snapshot 1`] = `
<withStyles(ContainerPure)>
  <withStyles(RowPure)>
    <withStyles(ColumnPure)
      xs={12}
    >
      <div
        className="footer-0-3"
      >
        <withStyles(RowPure)>
          <withStyles(ColumnPure)
            lg={4}
            xs={0}
          />
          <withStyles(ColumnPure)
            lg={4}
            xs={12}
          >
            <div
              className="copyright-0-0"
            >
              DEM Team - 04.03.2007
            </div>
          </withStyles(ColumnPure)>
          <withStyles(ColumnPure)
            lg={4}
            xs={0}
          >
            <withStyles(HiddenPure)
              md="down"
            >
              <div
                className="socialMediaLinkIconContainer-0-1"
              >
                <SocialMediaLink
                  className="socialMediaLinkIcon-0-2"
                  socialMediaLinkItem={
                    Object {
                      "href": "https://vk.com/exmachina2",
                      "id": 2,
                      "order": 2,
                      "svgImageName": "Vk",
                      "title": "VK - Ex Machina group",
                    }
                  }
                />
                <SocialMediaLink
                  className="socialMediaLinkIcon-0-2"
                  socialMediaLinkItem={
                    Object {
                      "href": "http://steamcommunity.com/groups/Ex_Machina",
                      "id": 1,
                      "order": 1,
                      "svgImageName": "Steam",
                      "title": "Steam - Ex Machina Community",
                    }
                  }
                />
              </div>
            </withStyles(HiddenPure)>
          </withStyles(ColumnPure)>
        </withStyles(RowPure)>
      </div>
    </withStyles(ColumnPure)>
  </withStyles(RowPure)>
</withStyles(ContainerPure)>
`;
